--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-torch>=1.7.0
-torchvision>=0.8.0
-opencv-python>=4.5.0
+# Core dependencies
+torch>=2.0.0
+torchvision>=0.15.0
+numpy>=1.21.0
+
+# Computer Vision
+opencv-python>=4.8.0
+
+# YOLO and Object Detection
 ultralytics>=8.0.0
-numpy>=1.19.0
+
+# OpenVINO support for optimized inference
+openvino>=2023.0.0
+onnx>=1.14.0
+
+# Additional utilities (often required by ultralytics)
+pillow>=9.0.0
+pyyaml>=6.0
+requests>=2.28.0
